<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtcardapio"
        android:layout_width="307dp"
        android:layout_height="28dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="44dp"
        android:text="@string/txtcardapio"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/txtRefrigerante"
        android:layout_width="202dp"
        android:layout_height="31dp"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="101dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/txtRefrigerante"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.245"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/qtdRefrigerante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="65dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/qtdRefrigerante"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.341"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/qtdCachorroQuente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="65dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/qtdCachorroQuente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.174"
        tools:ignore="DuplicateSpeakableTextCheck,LabelFor,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txtCachorroQuente"
        android:layout_width="235dp"
        android:layout_height="29dp"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="101dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/txtCachorroQuente"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.269"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btncalcular"
        android:layout_width="162dp"
        android:layout_height="77dp"
        android:layout_marginStart="125dp"
        android:layout_marginEnd="125dp"
        android:backgroundTint="@color/material_dynamic_neutral_variant20"
        android:onClick="btncalcular"
        android:text="@string/btncalcular"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.759" />

    <TextView
        android:id="@+id/txtvalortotal"
        android:layout_width="74dp"
        android:layout_height="33dp"
        android:layout_marginStart="173dp"
        android:layout_marginEnd="181dp"
        android:text="@string/txtvalortotal"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.845"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/txtSobremesa"
        android:layout_width="186dp"
        android:layout_height="30dp"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="101dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/txtSobremesa"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/qtdSobremesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="65dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/qtdSobremesa"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/qtdSobremesa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.508"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnproximo"
        android:layout_width="309dp"
        android:layout_height="59dp"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="51dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:fontFamily="sans-serif-black"
        android:onClick="btnproximo"
        android:text="@string/btnproximo"
        android:textColor="#455A64"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.952" />

    <VideoView
        android:id="@+id/vv"
        android:layout_width="291dp"
        android:layout_height="115dp"
        android:layout_marginStart="87dp"
        android:layout_marginEnd="87dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.602" />

</androidx.constraintlayout.widget.ConstraintLayout>