<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".exercicio2">

    <Button
        android:id="@+id/btnproximo2"
        android:layout_width="309dp"
        android:layout_height="59dp"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="51dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:fontFamily="sans-serif-black"
        android:onClick="btnvoltar"
        android:text="@string/btnvoltar"
        android:textColor="#455A64"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.909" />

    <EditText
        android:id="@+id/txtvalor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="65dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.503"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/txtvalor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="101dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txtverificacao"
        android:layout_width="140dp"
        android:layout_height="58dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="136dp"
        android:text="@string/txtverificacao"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.743" />

    <TextView
        android:id="@+id/txtnum1"
        android:layout_width="119dp"
        android:layout_height="30dp"
        android:layout_marginStart="174dp"
        android:layout_marginEnd="169dp"
        android:layout_marginBottom="20dp"
        android:text="@string/txtnum1"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.205"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/txtnum2"
        android:layout_width="116dp"
        android:layout_height="33dp"
        android:layout_marginStart="174dp"
        android:layout_marginEnd="179dp"
        android:text="@string/txtnum2"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.375"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btnverificar"
        android:layout_width="163dp"
        android:layout_height="70dp"
        android:layout_marginStart="124dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="33dp"
        android:onClick="btnverificar"
        android:text="@string/btnverificar"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.628" />

    <TextView
        android:id="@+id/txttitulo"
        android:layout_width="260dp"
        android:layout_height="52dp"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="77dp"
        android:text="@string/txttitulo"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06"
        tools:ignore="TextSizeCheck" />

    <ImageButton
        android:id="@+id/btnsair"
        android:layout_width="77dp"
        android:layout_height="77dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="436dp"
        android:backgroundTint="@color/white"
        android:onClick="btnsair"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073"
        app:srcCompat="@drawable/sair"
        android:contentDescription="TODO"
        tools:ignore="ContentDescription,HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>